After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 725662 - Missing constant breaks build
Missing constant breaks build
Status: RESOLVED FIXED
Product: gnome-control-center
Classification: Core
Component: Printers
3.11.x
Other Linux
: Normal normal
: ---
Assigned To: Marek Kašík
Control-Center Maintainers
Depends on:
Blocks:
 
 
Reported: 2014-03-04 15:40 UTC by Marek Kašík
Modified: 2014-03-04 15:48 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Define missing constant (821 bytes, patch)
2014-03-04 15:40 UTC, Marek Kašík
committed Details | Review

Description Marek Kašík 2014-03-04 15:40:57 UTC
Created attachment 270913 [details] [review]
Define missing constant

Constant HTTP_URI_OK was renamed to HTTP_URI_STATUS_OK in CUPS 1.7. Attached patch defines it for CUPS <= 1.6.

Originally reported by Rui to me.

Marek
Comment 1 Rui Matos 2014-03-04 15:42:36 UTC
Review of attachment 270913 [details] [review]:

ok
Comment 2 Marek Kašík 2014-03-04 15:48:07 UTC
Comment on attachment 270913 [details] [review]
Define missing constant

Thank you for the review. I've pushed it to master.