printers: Define missing constant

Define HTTP_URI_STATUS_OK if compiling against CUPS 1.6 or lower.
(HTTP_URI_OK was renamed to HTTP_URI_STATUS_OK in CUPS 1.7.)

https://bugzilla.gnome.org/show_bug.cgi?id=725662